--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -13,6 +13,12 @@ services:
         command: 'auth0:cleanupusers'
         description: 'Disable or remove obsolete website users.'
 
+  Leuchtfeuer\Auth0\Domain\Repository\ApplicationRepository:
+    public: true
+
+  Leuchtfeuer\Auth0\Domain\Repository\UserRepositoryFactory:
+    public: true
+
   Leuchtfeuer\Auth0\EventListener\AfterPackageActivation:
     tags:
       - name: event.listener
@@ -24,3 +30,6 @@ services:
       - name: event.listener
         identifier: auth0BeforePackageActivationEvent
         event: Leuchtfeuer\Auth0\EventListener\BeforeUserLogoutEvent
+
+  Leuchtfeuer\Auth0\Service\AuthenticationService:
+    public: true
