[DOC] Update documentation

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,10 +1,10 @@
 [general]
 project     = Auth0 for TYPO3
-release     = 4.0.0
+release     = 13.0.0
 copyright   = since 2018 by the authors
 
-t3author    = Florian Wessels, Leuchtfeuer Digital Marketing
-description = This extension allows you to log into a TYPO3 backend or frontend via Auth0. Auth0 is the solution you need for web,
+t3author    = Florian Wessels, Max Rösch, Oliver Heins, Leuchtfeuer Digital Marketing
+description = This extension allows you to log into a TYPO3 backend  via Auth0. Auth0 is the solution you need for web,
               mobile, IoT, and internal applications. Loved by developers and trusted by enterprises.
 
 
