--- a/Libraries/composer.json
+++ b/Libraries/composer.json
@@ -1,16 +1,16 @@
 {
   "require": {
     "auth0/auth0-php": "^8.1",
-    "lcobucci/jwt": "^4.1",
-    "symfony/http-foundation": "^5.4 || ^6.2",
-    "symfony/property-access": "^4.4 || ^5.4 || ^6.2",
-    "symfony/property-info": "^5.4 || ^6.3",
-    "symfony/serializer": "^4.4 || ^5.4 || ^6.2"
+    "lcobucci/jwt": "^5.1",
+    "symfony/http-foundation": "^6.2 || ^7.1.3",
+    "symfony/property-access": "^6.2 || ^7.1.4",
+    "symfony/property-info": "^6.3 || ^7.1",
+    "symfony/serializer": "^6.4 || ^7.0"
   },
   "config": {
     "classmap-authoritative": true,
     "platform": {
-      "php": "7.4.0"
+      "php": "8.2.0"
     }
   }
 }
