--- a/Libraries/composer.json
+++ b/Libraries/composer.json
@@ -1,16 +1,20 @@
 {
   "require": {
-    "auth0/auth0-php": "^8.1",
+    "auth0/auth0-php": "^8.14.0",
     "lcobucci/jwt": "^5.1",
     "symfony/http-foundation": "^6.2 || ^7.1.3",
     "symfony/property-access": "^6.2 || ^7.1.4",
     "symfony/property-info": "^6.3 || ^7.1",
-    "symfony/serializer": "^6.4 || ^7.0"
+    "symfony/serializer": "^6.4 || ^7.0",
+    "nyholm/psr7": "^1.8"
   },
   "config": {
     "classmap-authoritative": true,
     "platform": {
       "php": "8.2.0"
+    },
+    "allow-plugins": {
+      "php-http/discovery": true
     }
   }
 }
