--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     ],
     "homepage": "https://www.Leuchtfeuer.com",
     "require": {
+        "php": "^7.4 || ^8.0",
         "auth0/auth0-php": "^8.1",
         "lcobucci/jwt": "^4.1",
         "symfony/http-foundation": "^5.4 || ^6.2",
